# golden-pybind11

./: .buildinfo  .gitignore  CMakeLists.txt  README.html  README.md  README.rst  default-shell.nix  default.nix  default.shell.nix  derivation-setuptools.nix  derivation-shell.nix  derivation.nix  flake.nix  genindex.html  index.html  objects.inv  old_setup.py  project.nix  project_dev_shell.nix  search.html  searchindex.js  setup.py  shell.nix  toc-index.html
.github/workflows/: tests.yml
_sources/: README.rst.txt  toc-index.rst.txt
_sources/examples/: numpy_nocopy.rst.txt
about/: index.html
docs/content/: README.rst  conf.py  index.rst
docs/content/about/: index.rst
docs/content/autodoc/: index.rst
examples/: index.html  index.rst  numpy_nocopy.html  numpy_nocopy.ipynb
golden/: __init__.py  project.py  version.py
src/: CMakeLists.txt  README.md
src/golden/: CMakeLists.txt
src/golden/cli/: golden.cpp
src/golden/include/: gold.hpp
src/pybind/: CMakeLists.txt
src/pybind_mask/: CMakeLists.txt
src/pybind_view/: CMakeLists.txt  wrapper_view.cpp
src/utils/: static.hpp.in
tests/cpp/unit/: CMakeLists.txt  test_dummy.cpp
tests/cpp_unit/: CMakeLists.txt
tests/python/: CMakeLists.txt  automation.py  test_golden.py
tests/python_unit/: CMakeLists.txt  automation.py  test_golden.py
tests/sandbox/: CMakeLists.txt  sandbox.cpp
